Commit with changes: POM, Logs etc